# agocontrol

./: .gitignore  .gitlab-ci.yml  .lvimrc  CMakeLists.txt  README  agocontrol.spec
conf/: .gitignore  CMakeLists.txt  agoalert.init  agocontrol.aug  agocrash.sh  agogdb.sh  agorrdtool.init.in  ipx800.init  ipx800.init.in  mopidy.init  mopidy.init.in  schema.yaml  squeezebox.init.in
core/: .gitignore  CMakeLists.txt
core/datalogger/: CMakeLists.txt  agodatalogger.cpp
core/resolver/: CMakeLists.txt  agoresolver.cpp  inventory.cpp  inventory.h  schema.cpp  schema.h
core/security/: CMakeLists.txt  agosecurity.cpp
core/system/: CMakeLists.txt  agosystem.cpp  agosystem.h  processinfo_freebsd.cpp  processinfo_linux.cpp  procps_debian_testing.patch
data/: datalogger.sql
debian/: agocontrol-atalarm.install  agocontrol-axisaudiotransmit.install  agocontrol-eta.install  agocontrol-gammu.install  agocontrol-i2c.postinst  agocontrol-imperihome.install  agocontrol-ipx800.install  agocontrol-knx.install  agocontrol-lifx.install  agocontrol-lifx.postinst  agocontrol-mopidy.install  agocontrol-mqtt.install  agocontrol-mysensors.install  agocontrol-nvr.install  agocontrol-onvif.install  agocontrol-oregon.install  control  (+9 more)
devices/: .gitignore  CMakeLists.txt  agosimulator.py  example.py
devices/1wire/: agoowfs.py
devices/ATAlarm/: CMakeLists.txt  agoatalarm.cpp
devices/ETAtouch/: CMakeLists.txt  agoeta.py
devices/ETAtouch/maps/: eta.json
devices/MCP3x0x/: MCP3x0x.py
devices/MQTT/: CMakeLists.txt  agomqtt.py
devices/MySensors/: CMakeLists.txt  MySensors.cpp  MySensors.h  agoMySensors.cpp  serialib.cpp  serialib.h
devices/NVR/: CMakeLists.txt  agovideo.cpp  frameprovider.cpp  frameprovider.h  nvr.cpp
devices/PLCBUS/: PLCBUS.cpp  PLCBUS.h
devices/agoapc/: agoapc.py
devices/agodmx/: CMakeLists.txt  agodmx.cpp
devices/agoping/: CMakeLists.txt  agoping.py
devices/alert/: agoalert.py  pushbullet.py
devices/asterisk/: agoasterisk.py
devices/axisaudiotransmit/: CMakeLists.txt  agoaxisaudiotransmit.py
devices/blinkm/: CMakeLists.txt  agoblinkm.cpp
devices/blockly/: README  agocontrol.html  agocontrol_debug.html  copy-build.sh  fullschema.yaml  schema.yaml  setup.sh
devices/blockly/blocks/: agocontrol.js  common.js  datetime.js  text.js  variables.js
devices/blockly/core/: css.js  field_dropdown.js  variables.js
devices/blockly/generators/: lua.js
devices/blockly/generators/lua/: agocontrol.js  common.js  datetime.js  loops.js  text.js  variables.js
devices/blockly/lua/: agocontrol.js  common.js  variables.js
devices/blockly/patches/: build.py.patch  core-css.js.patch  core-field_dropdown.js.patch
devices/blockly/test/: agocontrol.html  fullschema.yaml
devices/chromoflex/: CMakeLists.txt  chromoflex.cpp
devices/enigma2/: agoenigma2.py
devices/enocean3/: agoenocean3.cpp  esp3.cpp  esp3.h  test.cpp
devices/example/: CMakeLists.txt  example.cpp
devices/firmata/: CMakeLists.txt  agofirmata.cpp
devices/gammu/: CMakeLists.txt  agogammu.py
devices/harmonyhub/: CMakeLists.txt  csocket.h
devices/hue/: agohue.py
devices/hue/rgb_cie/: __init__.py
devices/i2c/: agoi2c.cpp
devices/inim/: inim.py
devices/ipx800/: CMakeLists.txt  agoipx800  agoipx800.py  pyipx800v3.py
devices/irtrans_ethernet/: CMakeLists.txt  agoirtrans_ethernet.cpp
devices/knx/: CMakeLists.txt  Telegram.cpp  Telegram.h  agoknx.cpp
devices/kwikwai/: CMakeLists.txt  agokwikwai.cpp  kwikwai.cpp  kwikwai.h
devices/lifx/: .gitignore  CMakeLists.txt  agolifx.py  lifx.conf-example  lifxbase.py  lifxlan2.py  lifxnet.py  lifxtestsuite.py  prodinfo.json  testsuiteLAN1.py
devices/lifx/lifxlan/: device.py  light.py
devices/mediaproxy/: agomediaproxy.cpp
devices/mediaproxy/liveMedia/: RTSPClient.cpp
devices/mopidy/: .gitignore  CMakeLists.txt  agomopidy.py  mopidy.py
devices/onkyo/: agoiscp.py
devices/onvif/: CMakeLists.txt  README  agoonvif.py  onvif.cpp
devices/onvif-old/: CMakeLists.txt  onvif.cpp
devices/onvif/onvif/: CMakeLists.txt  exceptions.py
devices/onvif/suds/: CMakeLists.txt
devices/onvif/suds_passworddigest/: CMakeLists.txt
devices/onvif/wsdl/: CMakeLists.txt
devices/oregon/: CMakeLists.txt  agooregon.cpp  readme.txt
devices/rain8net/: CMakeLists.txt  agorain8net.cpp
devices/raspi1wGPIO/: raspi1wGPIO.py
devices/raspiCamera/: raspiCamera.py
devices/raspiGPIO/: raspiGPIO.py
devices/raspiLCD/: raspiLCD.py
devices/raspiMCP3xxxGPIO/: raspiMCP3xxxGPIO.py
devices/rrdtool/: agorrdtool.py
devices/scheduler/: agoscheduler.py
devices/shvt250/: CMakeLists.txt  shvt250.cpp
devices/squeezebox/: agosqueezebox.py  pylmslibrary.py  pylmsplayer.py  pylmsplaylist.py  pylmsserver.py
devices/squeezeboxserver/: agosqueezeboxserver.py
devices/tellstick/: CMakeLists.txt  agotellstick.py  filter.py  td.py  tellstick.conf  tellstick.conf-example  tellstick_auth.py  tellstickbase.py  tellstickduo.py  tellsticknet.py
devices/wake_on_lan/: agowake_on_lan.py
devices/weather/: agoweather.py
devices/weatherreporter/: CMakeLists.txt  agoweatherreporter.py  weatherreporter.conf-example
devices/webcam/: CMakeLists.txt  agowebcam.cpp
devices/wifi_device_detect/: wifi_device_detect.py
devices/yamaha/: CMakeLists.txt  agoyamaha  agoyamaha.cpp  yamaha_device.cpp  yamaha_device.h  yamaha_device_base.cpp  ynca_message.cpp
devices/zmcam/: CMakeLists.txt  agozmcam.cpp
devices/zwave/: CMakeLists.txt  ZWApi.h  ZWaveNode.cpp  ZWaveNode.h  agozwave.cpp
gateways/ImperiHome/: CMakeLists.txt  agoImperiHome.cpp
shared/: CMakeLists.txt  agoapp.cpp  agoapp.h  agoclient.cpp  agoclient.h  agoclient.h.in  agoclient.py.in  agoconfig.cpp  agoconfig.h  agolog.cpp  agolog.h  agolog_basic.cpp  agolog_basic.h  agolog_boost.cpp  agolog_boost.h  agoproto.cpp  agoproto.h  base64.cpp  options_validator.hpp  response_codes.h
shared/agoclient/: __init__.py  _directories.py.in  _logging.py  agoapp.py  agoconnection.py  config.py  directories.py.in  test_config.py
unittest/: CMakeLists.txt  runner.cpp
unittest/shared/: test_agoconfig.cpp  test_config_namelist.cpp
(+435 files in other folders)
